--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "NFT VAULT",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "test:coverage": "npx hardhat coverage",
+    "build": "npx hardhat compile"
   },
   "keywords": [
     "solidity",
@@ -15,12 +17,10 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@openzeppelin/contracts": "^4.7.3",
     "chai-bn": "^0.3.1",
     "dotenv": "^16.0.1",
     "hardhat": "^2.10.2",
     "web3-utils": "^1.7.5"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
   }
 }
