fix: push and pull from array

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
+# Obviously, it is not a real mnemonic. It's just for testing purposes.
 MNEMONIC="symbol round peanut unique always receive sister cheese lamp measure hidden check success artist engage"
